--- a/example-config/ogl.toml
+++ b/example-config/ogl.toml
@@ -140,7 +140,7 @@ description = "I love to mix sex and video games. (e.g. Someone uses my Lush whi
 emoji = "joystick"
 role = "Heal Slut"
 [[roles.menu.options]]
-description = "I love to watch and hear people play.
+description = "I love to watch and hear people play."
 emoji = "eyes"
 role = "Voyeur"
 
